# mancala

./: .dockerignore  .travis.yml  Dockerfile  Makefile  README.md  dev_requirements.txt  pyproject.toml  setup.py
.github/workflows/: linter.yml  test.yml
src/: board.py  factory.py  game.py  main.py  menu.py  player.py  series.py  terminal.py  utils.py
tests/: conftest.py  factories.py  test_board.py  test_game.py  test_player.py  test_utils.py
