[tool.poetry]
name = "mancala"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
blessings = "^1.7"
tabulate = "^0.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-mock = "^2.0.0"
isort = "^4.3.21"
bpython = "^0.18"
pytest-factoryboy = "^2.0.3"
flake8 = "^3.7.9"
pdbpp = "^0.10.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
